--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Jesse Mu <muj@bc.edu>", "Kevin Gleason <gleasokh@bc.edu>"]
 
 [dependencies]
 argparse = "0.2.1"
+
+[lib]
+name = "satyrs" 
