--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Jesse Mu <muj@bc.edu>", "Kevin Gleason <gleasokh@bc.edu>"]
 
 [dependencies]
 argparse = "0.2.1"
+tempfile = "2.1.3"
 
 [lib]
-name = "satyrs" 
+name = "satyrs"
